<resources>
    <string name="app_name">指点农情</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="home">首页</string>
    <string name="askprice">问菜价</string>
    <string name="weather">当地天气</string>
    <string name="uploadweather">农情信息</string>
    <string name="about">关于我们</string>

    <string name="qidian">起点</string>
    <string name="xuanzedidian">（选择您需要销售地点）</string>
    <string name="shengfen">省份</string>
    <string name="chengshi">城市</string>
    <string name="diqu">地区</string>
    <string name="zhongdian">终点</string>
    <string name="xuanzezhongdian">（选择您需要销售终点）</string>
    <string name="shangpin">商品</string>
    <string name="xuanzechanpin">（选择您需要销售产品）</string>
    <string name="shucai">蔬菜</string>
    <string name="caipin">菜品</string>
    <string name="dangdijiage">当地参考价格</string>
    <string name="dianji">点击查询</string>
    <string name="pifa">批发价格:</string>
    <string name="moren">$00.00</string>
    <string name="lingshou">零售价格:</string>
    <string name="shangpinchengben">商品成本、数量</string>
    <string name="xiaoshou">销售数量</string>
    <string name="xiaoshou_cb">销售成本</string>
    <string name="yunshu">运输车辆类型、燃油类型</string>
    <string name="cheliangleixing">点击选择车辆类型</string>
    <string name="ranyouleixing">点击选择燃油类型</string>
    <string name="chengben">其他成本</string>
    <string name="gongren">工人费用</string>
    <string name="cailiao">材料费用</string>
    <string name="qtfy">其他费用</string>
    <string name="yuan">元</string>
    <string name="huoqu">获取路线</string>

    <string name="loading">加载中</string>
    <string name="wait">请稍等...</string>

    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    
    <string name="aboutus">是由中国兴农网（http://www.xn121.com/）与贵州农经网（http://www.gznw.gov.cn/）联合退出的一款基于移动互联网的农产品信息导航系统，也是一款为“三农”服务的手机客户端软件。该软件提供农产品市场经济信息，包括农产品交易路线规划、农产品供求信息智能配对、气象信息推送、农经资讯查询和信息上报等诸多功能和服务。</string>
    <string name="xingnong">中国兴农网是由中国气象局主办，公共气象服务中心承办、各省气象部门联办的为农服务网站，2001年6月开通。</string>
    <string name="guizhong">贵州农经网是贵州省人民政府主办，贵州省气象局承办，为“三农”服务的农业综合信息网，2008年8月开通。</string>

</resources>
