<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <ImageView
        android:id="@+id/progress1"
        android:layout_width="@dimen/progress_width"
        android:layout_height="@dimen/progress_height"
        android:src="@drawable/progress_red"
        />
    <ImageView
        android:id="@+id/progress2"
        android:layout_width="@dimen/progress_width"
        android:layout_height="@dimen/progress_height"
        android:src="@drawable/progress_gray"
        android:layout_below="@+id/progress1"
        />
    <ImageView
        android:id="@+id/progress3"
        android:layout_width="@dimen/progress_width"
        android:layout_height="@dimen/progress_height"
        android:src="@drawable/progress_gray"
        android:layout_below="@+id/progress2"
        />
    <ImageView
        android:id="@+id/progress4"
        android:layout_width="@dimen/progress_width"
        android:layout_height="@dimen/progress_height"
        android:src="@drawable/progress_gray"
        android:layout_below="@+id/progress3"
        />
    <ImageView
        android:id="@+id/progress5"
        android:layout_width="@dimen/progress_width"
        android:layout_height="@dimen/progress_height"
        android:src="@drawable/progress_gray"
        android:layout_below="@+id/progress4"
        />
    <ImageView
        android:id="@+id/progress6"
        android:layout_width="@dimen/progress_width"
        android:layout_height="@dimen/progress_height"
        android:src="@drawable/progress_gray"
        android:layout_below="@+id/progress5"
        />
    <ImageView
        android:id="@+id/progress7"
        android:layout_width="@dimen/progress_width"
        android:layout_height="@dimen/progress_height"
        android:src="@drawable/progress_gray"
        android:layout_below="@+id/progress6"
        />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="30dp"
        android:layout_toRightOf="@id/progress1"
        >
        <TextView
            android:id="@+id/qidian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qidian"
            android:textSize="@dimen/text_size_big"
            android:textColor="@color/red"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xuanzedidian"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/red"
            android:layout_toRightOf="@id/qidian"
            android:layout_marginLeft="6dp"
            android:layout_alignBaseline="@id/qidian"
            />

        <View
            android:id="@+id/line1"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/qidian"
            android:background="@color/grey"
            />

        <TextView
            android:id="@+id/btn_sf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line1"
            android:background="@color/red"
            android:text="@string/shengfen"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_big"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            />

        <ImageView
            android:id="@+id/direct1"
            android:layout_width="9dp"
            android:layout_height="10dp"
            android:layout_below="@id/line1"
            android:layout_toRightOf="@id/btn_sf"
            android:layout_alignBottom="@id/btn_sf"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/direct"
            />

        <TextView
            android:id="@+id/btn_cs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line1"
            android:layout_toRightOf="@id/direct1"
            android:background="@color/red"
            android:text="@string/chengshi"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_big"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            />

        <View
            android:id="@+id/line2"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="6dp"
            android:layout_below="@id/btn_sf"
            android:background="@color/grey"
            />

        <TextView
            android:id="@+id/zhongdian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zhongdian"
            android:textSize="@dimen/text_size_big"
            android:textColor="@color/grey"
            android:layout_below="@id/line2"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xuanzezhongdian"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/grey"
            android:layout_below="@id/line2"
            android:layout_toRightOf="@id/zhongdian"
            android:layout_alignBaseline="@id/zhongdian"
            android:layout_marginLeft="6dp"
            />

        <View
            android:id="@+id/line3"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/zhongdian"
            android:background="@color/grey"
            />

        <TextView
            android:id="@+id/btn_sf2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line3"
            android:background="@color/grey"
            android:text="@string/shengfen"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_big"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            />


        <View
            android:id="@+id/line4"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="6dp"
            android:layout_below="@id/btn_sf2"
            android:background="@color/grey"
            />


        <TextView
            android:id="@+id/shangpin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shangpin"
            android:textSize="@dimen/text_size_big"
            android:textColor="@color/grey"
            android:layout_below="@id/line4"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xuanzechanpin"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/grey"
            android:layout_below="@id/line4"
            android:layout_toRightOf="@id/shangpin"
            android:layout_marginLeft="6dp"
            android:layout_alignBaseline="@id/shangpin"
            />

        <View
            android:id="@+id/line5"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/shangpin"
            android:background="@color/grey"
            />


        <TextView
            android:id="@+id/btn_sc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line5"
            android:background="@color/grey"
            android:text="@string/shucai"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_big"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            />

        <ImageView
            android:id="@+id/direct2"
            android:layout_width="9dp"
            android:layout_height="10dp"
            android:layout_below="@id/line5"
            android:layout_toRightOf="@id/btn_sc"
            android:layout_alignBottom="@id/btn_sc"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/direct"
            />

        <TextView
            android:id="@+id/btn_cp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line5"
            android:layout_toRightOf="@id/direct2"
            android:background="@color/grey"
            android:text="@string/caipin"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_big"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            />

        <View
            android:id="@+id/line6"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="6dp"
            android:layout_below="@id/btn_sc"
            android:background="@color/grey"
            />

        <TextView
            android:id="@+id/dangdijiage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dangdijiage"
            android:textSize="@dimen/text_size_big"
            android:textColor="@color/grey"
            android:layout_below="@id/line6"
            />

        <View
            android:id="@+id/line7"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/dangdijiage"
            android:background="@color/grey"
            />

        <TextView
            android:id="@+id/btn_cx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line7"
            android:background="@color/grey"
            android:text="@string/dianji"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_big"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            />

        <TextView
            android:id="@+id/tv_pf"
            android:layout_width="@dimen/price_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/line7"
            android:layout_toRightOf="@id/btn_cx"
            android:background="@color/grey"
            android:text="@string/pifa"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_smaller"
            android:layout_marginLeft="@dimen/price_marginlift"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="4dp"
            android:paddingBottom="0dp"
            android:layout_marginTop="1dp"
            />

        <TextView
            android:id="@+id/tv_pf_c"
            android:layout_width="@dimen/price_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_pf"
            android:layout_toRightOf="@id/btn_cx"
            android:background="@color/grey"
            android:text="@string/pifa"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_smaller"
            android:layout_marginLeft="@dimen/price_marginlift"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="0dp"
            android:paddingBottom="4dp"
            />

        <TextView
            android:id="@+id/tv_ls"
            android:layout_width="@dimen/price_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/line7"
            android:layout_toRightOf="@id/tv_pf"
            android:background="@color/grey"
            android:text="@string/lingshou"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_smaller"
            android:layout_marginLeft="@dimen/price_marginlift"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="4dp"
            android:paddingBottom="0dp"
            android:layout_marginTop="1dp"
            />

        <TextView
            android:id="@+id/tv_ls_c"
            android:layout_width="@dimen/price_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_pf"
            android:layout_toRightOf="@id/tv_pf_c"
            android:background="@color/grey"
            android:text="@string/lingshou"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_smaller"
            android:layout_marginLeft="@dimen/price_marginlift"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="0dp"
            android:paddingBottom="4dp"
            />

        <View
            android:id="@+id/line8"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="6dp"
            android:layout_below="@id/btn_cx"
            android:background="@color/grey"
            />

        <TextView
            android:id="@+id/shangping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shangpinchengben"
            android:textSize="@dimen/text_size_big"
            android:textColor="@color/grey"
            android:layout_below="@id/line8"
            />

        <View
            android:id="@+id/line9"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/shangping"
            android:background="@color/grey"
            />

        <TextView
            android:id="@+id/xiaoshou"
            android:layout_width="@dimen/xiaoshou_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/line9"
            android:text="@string/xiaoshou"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_size_big"
            android:lines="2"
            />

        <EditText
            android:id="@+id/xs_sl"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/line9"
            android:layout_toRightOf="@id/xiaoshou"
            android:layout_alignBottom="@id/xiaoshou"
            android:hint="0"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:id="@+id/xiaoshou_cb"
            android:layout_width="@dimen/xiaoshou_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/line9"
            android:text="@string/xiaoshou_cb"
            android:layout_toRightOf="@id/xs_sl"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_size_big"
            android:lines="2"
            android:layout_marginLeft="10dp"
            />

        <EditText
            android:id="@+id/xs_cb"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/line9"
            android:layout_toRightOf="@id/xiaoshou_cb"
            android:layout_alignBottom="@id/xiaoshou_cb"
            android:hint="0"
            android:layout_marginLeft="10dp"
            />




    </RelativeLayout>

</RelativeLayout>
