<?xml version="1.0" encoding="utf-8"?>
<me.dreamheart.autoscalinglayout.ASLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    custom:designWidth="384dp"
    custom:designHeight="575dp"
    custom:autoScaleEnable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/aboutus"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="指点农情"
            android:textSize="@dimen/text_size_big"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/title"
            android:layout_alignBaseline="@id/title"
            android:text="v1.0"
            android:textSize="@dimen/text_size_small"
            android:layout_marginLeft="5dp"
            />

        <TextView
            android:id="@+id/introduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="使用说明"
            android:textSize="@dimen/text_size_small"
            android:layout_alignBaseline="@id/version"
            android:background="@color/green"
            android:gravity="right"
            android:layout_alignParentRight="true"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_smaller2"
            android:textColor="@android:color/white"
            android:layout_below="@id/title"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/aboutus"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/xingnong"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/xingnong"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/guizhou"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/guizhong"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />


    </LinearLayout>


</me.dreamheart.autoscalinglayout.ASLinearLayout>
